--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,15 @@ dependencies = [
     "pandas>=2.3.3",
     "pydantic-ai>=1.31.0",
     "pymysql>=1.1.2",
+    "requests>=2.32.5",
+    "streamlit>=1.52.2",
 ]
 
 [[tool.uv.index]]
 url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
+
+[tool.uv.workspace]
+members = [
+    "ui",
+]
