--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "a2a-sdk>=0.3.22",
     "dotenv>=0.9.9",
     "google-adk>=1.21.0",
     "langchain-openai>=1.1.6",
@@ -22,7 +23,3 @@ dependencies = [
 url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
 default = true
 
-[tool.uv.workspace]
-members = [
-    "ui",
-]
